# xstatic-json2yaml

./: .gitreview  LICENSE  README.txt  setup.cfg  setup.py
xstatic/pkg/json2yaml/: __init__.py
xstatic/pkg/json2yaml/data/: json2yaml.js
