[metadata]
name = XStatic-Json2yaml
description = Json2yaml 0.1.0 (XStatic packaging standard)
description-file = README.rst
maintainer = xinni.ge
maintainer-email = xinni.ge@ntt.com
home-page = https://github.com/jeffsu/json2yaml
keywords = json2yaml xstatic
license = Apache 2.0
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
